--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "f11_n12_master",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./_src/server.js",
-    "dev": "node ./_src/server.js"
+    "dev": "node ./_src/server.js",
+    "test": "mocha --timeout 10000 _src/test/user.js"
   },
   "author": "longnt1",
   "license": "MIT",
@@ -14,6 +14,8 @@
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
@@ -26,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "juice": "^8.0.0",
     "lodash": "^4.17.21",
+    "mocha": "^9.1.2",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "nodemailer": "^6.6.5",
