--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./_src/server.js",
     "dev": "node ./_src/server.js",
-    "test": "mocha --timeout 10000 _src/test/index.js"
+    "test": "NODE_ENV=test mocha --timeout 10000 _src/test/index.js"
   },
   "author": "longnt1",
   "license": "MIT",
@@ -32,8 +32,10 @@
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "nodemailer": "^6.6.5",
-    "prompt-sync": "^4.2.0",
+    "prompt-sync": "^4.1.6",
     "sequelize": "^6.6.5",
+    "swagger-jsdoc": "^5.0.1",
+    "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
   }
 }
