--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD=l8019454
+DB_PASSWORD=phuongtheo@TPT1708
 DB_NAME=F11_N12_PRO
 DB_TYPE=mysql
 DB_SYNC=false
