--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-fastify": "^8.2.4",
     "@nestjs/typeorm": "^8.0.2",
     "bcrypt": "^5.0.1",
+    "bluebird": "^3.7.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "fastify-static": "^4.5.0",
