--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "handlebars": "^4.7.7",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mssql": "^7.3.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nest-winston": "^1.6.2",
@@ -69,7 +70,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
-    "prettier": "^2.3.2",
+    "prettier": "2.5.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
